<package>
  <name>autolabor_pro1_nav</name>
  <version>0.1.0</version>

  <description>autolabor_pro1_nav</description>

  <maintainer email="wangliujun_bit@163.com">wangliujun</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>pi_trees_lib</build_depend>
  <build_depend>pi_trees_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>pi_trees_lib</run_depend>
  <run_depend>pi_trees_ros</run_depend>

</package>
